# chatgpt-tui

./: Cargo.toml  README.md
assets/: README.md
src/: api.rs  format.rs  main.rs
