[package]
name = "chatgpt-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20", features = ["markdown"] }
cursive-syntect = "0.1"
syntect = "5.0"
surf = "2.3.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
comrak = "0.16"
serde_json = "1.0"

[[bin]]
name = "chat"
path = "src/main.rs"
